# Aegis-Protocol

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  release-please.yml
aegis/: __init__.py  config.py  main.py
aegis/agent/: __init__.py  db_sink.py  errors.py  protocol.py  runtime.py  stubs.py  types.py
aegis/agent/tools/: __init__.py  rag.py
aegis/api/: admin.py  dependencies.py  keeper.py  routes.py
aegis/chain/: __init__.py  ens.py  ens_subname.py  registry.py  simulator.py  tools.py  wallet.py
aegis/channels/: __init__.py  base.py  discord.py  memory.py  telegram.py
aegis/db/: __init__.py  base.py  models.py  session.py
aegis/keeper/: __init__.py  registry.py  runner.py  tasks.py
aegis/rag/: __init__.py  flashrank_reranker.py  service.py
aegis/retrieval/: __init__.py  bm25.py  dense.py  pipeline.py  protocol.py  rrf.py  stubs.py  types.py
alembic/: env.py
alembic/versions/: 001_init.py
contracts/: AegisRegistry.sol  README.md
contracts/scripts/: __init__.py  deploy_registry.py
docs/: AI_USAGE.md  ARCHITECTURE.md  DEMO.md  QUICKSTART.en.md  QUICKSTART.ru.md
docs/superpowers/plans/: 2026-05-01-days-3-5.md
scripts/: __init__.py  demo_walkthrough.py
tests/: test_agent_db_sink.py  test_agent_runtime.py  test_agent_stubs.py  test_agent_tools_rag.py  test_agent_types.py  test_api_admin.py  test_api_keeper.py  test_chain_ens.py  test_chain_simulator.py  test_chain_tools.py  test_chain_wallet.py  test_channels_discord.py  test_channels_memory.py  test_channels_telegram.py  test_config_channels.py  test_demo_walkthrough.py  test_ens_subname.py  test_health.py  test_keeper_registry.py  test_keeper_tasks.py  test_migrations_apply.py  test_models_metadata.py  test_rag_flashrank.py  test_rag_service.py  test_registry_loader.py  test_registry_solidity.py  test_registry_stub.py  test_retrieval_pipeline.py  test_retrieval_qdrant.py  test_retrieval_rrf.py  test_retrieval_stubs.py  test_retrieval_types.py
