[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aegis"
version = "0.4.0"
description = "Trustworthy AI support agent for Web3 — ENS-verified, on-chain context, TEE-verified inference on 0G"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Pavel Kruglikovski", email = "p.kruglikovskii@gmail.com" }]
keywords = ["web3", "ai-agent", "ens", "0g", "rag", "support-bot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.14.0",
    "aiohttp>=3.13.5",
    "httpx>=0.28.1",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.31.0",
    "redis>=5.0",
    "fastembed>=0.4",
    "qdrant-client>=1.17.1",
    "structlog>=25.5.0",
    "python-dotenv>=1.0",
    "web3>=7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "mypy>=1.13",
    "types-redis>=4.6",
    "pre-commit>=4.0",
    "bandit>=1.9.4",
    "pip-audit>=2.10.0",
]
rerank = [
    "flashrank>=0.2.10",
]
telegram = [
    "aiogram>=3.27.0",
]
discord = [
    "discord.py>=2.5",
]
contracts = [
    "py-solc-x>=2.0.5",
]

[project.urls]
Repository = "https://github.com/devAsmodeus/Aegis-Protocol"
Issues = "https://github.com/devAsmodeus/Aegis-Protocol/issues"

[tool.hatch.build.targets.wheel]
packages = ["aegis"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "mypy>=1.13",
    "types-redis>=4.6",
    "pre-commit>=4.0",
    "bandit>=1.9.4",
    "pip-audit>=2.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["aegis", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
    "ASYNC", # flake8-async
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802", "N803"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
warn_return_any = true
warn_unreachable = true
namespace_packages = true
explicit_package_bases = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# Optional extras: not installed in the default `dev` group.
module = ["flashrank", "aiogram", "aiogram.types", "discord"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring external services (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
source = ["aegis"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.bandit]
exclude_dirs = ["tests", "alembic"]
